...
        colors = topAppBarColors(containerColor = backgroundColor),
        navigationIcon = {
            navigationIcon?.let {
                IconButton(onClick = onBack) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                        contentDescription = "Volver atrás",
                        tint = contentColor,
                    )
                }
            }
        },
        modifier = modifier
...
