...
        position = CameraPosition.fromLatLngZoom(initialPosition, 6.5f)
    }

    Scaffold(
        topBar = {
            DefaultAppBar(
                title = "Origen de la receta",
                onBack = onBack,
            )
        },
    ) { paddingValues ->
        Box(
            modifier = Modifier.padding(paddingValues)
...
