...
                color = Color.Gray,
                shape = RoundedCornerShape(24.dp)
            )
            .background(MaterialTheme.colorScheme.onSecondary, shape = RoundedCornerShape(24.dp))
            .clickableSingle(onClick = onClick)
            .padding(14.dp)
            .semantics { contentDescription = "Recipe item" },
        verticalArrangement = Arrangement.spacedBy(8.dp),
    ) {

        CoilImage(
            url = imageUrl,
            modifier = Modifier.fillMaxWidth(),
...
